# misc-aptly-tools

./: .gitignore  Instructions.md  README.md  check_package_versions.py  gh_downloads.py  misc_aptly_tool_util.py  publisher.py  pyproject.toml  static-downloads.py  static_downloads.py  update_from_remote.py
confs/: .gitignore  aptly-config_example.json  gh-repos_example.json
discord/: discord-latest.sh
github/: .gitignore  gh-download  gh-download.py
minecraft/: minecraft-latest.sh
static-url/: .gitignore  get-latest.py  package_urls-sample.json
